[package]
name = "wispha"
version = "0.1.0"
authors = ["Evian Zhang <evianzhang1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
libwispha = { path = "libwispha" }
structopt = "*"
rustyline = "*"
lazy_static = "*"
