[package]
name = "libwispha"
version = "0.1.0"
authors = ["Evian-Zhang <evianzhang1999@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libwispha"
path = "src/lib.rs"

[dependencies]
serde = { version = "*", features = ["derive", "rc"] }
serde_json = "*"

[dev-dependencies]
maplit = "*"
