[package]
name = "libwispha"
version = "0.1.0"
authors = ["Evian-Zhang <evianzhang1999@163.com>"]
edition = "2018"
description = "Library is used by Wispha program."
license = "Apache-2.0 AND MIT"
homepage = "https://github.com/Evian-Zhang/Wispha/tree/master/libwispha"
repository = "https://github.com/Evian-Zhang/Wispha/tree/master/libwispha"
documentation = "https://docs.rs/libwispha"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libwispha"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

[dev-dependencies]
maplit = "1.0"
